--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/06-Need-for-Programming-languages.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/06-Need-for-Programming-languages.mdx
@@ -1,12 +1,33 @@
+
+
 # Need for programming languages
-
-## Introduction
-
-As we know that if you need to communicate with you need a specific language to communicate.
 
   
 
-For example, if you need to communicate with two people, one person knows Hindi and the other person knows Telugu. In this case you need to identify the common language between them to communicate with each other. At that time you hear that both of them are able to understand and speak in English. So that you can communicate with them by using the English language.
+## Lesson Objective
+
+In this lesson you will understand the need to learn one or more programming languages. You will be given a brief history on how programming languages came to be and the different types that have emerged. This is a self-paced class.
+
+  
+
+![](https://media3.giphy.com/media/pzmbXFDiRbEEk1vCtP/giphy.gif?cid=790b76118c1d9efc47dfd8c255f1cc00b0b115b80d49d2c8&rid=giphy.gif&ct=g)
+## Introduction
+
+💬 **How would you define the word language?**
+
+  
+
+Communication requires a format or structure that is understood by all if it aims to be effective. If we all decided to communicate in some format or structure that was only known to us, we would not be able to convey important messages. This results in the need to develop a ‘language’. Aristotle defines language as a speech sound produced by human beings to express their ideas, emotions, thoughts, desires, and feelings.
+
+  
+
+Now look back at your definition of a language and take a moment to revise before we formally define the word.
+
+Here is the definition of ‘language’; A language is a system of conventional or written symbols through which human beings, as members of social groups and participants in their culture, communicate.
+
+  
+
+Let’s look at an instance. If you need to communicate with two people, one person knows Hindi and the other person knows Telugu. In this case you need to identify a common language between them in order for them to communicate with each other. You speak to them in some commonly known languages and come to the conclusion that they both understand English. Now, all the three parties can effectively communicate with each other in English.
 
   
 
@@ -14,117 +35,199 @@ Similarly, some specific languages are needed to communicate with computers, and
 
   
 
->A programming language is a set of instructions written in a specific language to perform a specific task. It is mainly used to develop desktop applications, operating systems, websites, mobile applications, etc.
+🏁A programming language is a set of instructions written in a specific language to perform a specific task. It is mainly used to develop desktop applications, operating systems, websites, mobile applications, etc.
 
   
 
-## Objectives of programming languages
+**Need for multiple programming languages:**
 
 -   Some languages, such as C, are designed to produce efficient code to be run on small computer systems.
     
--   Some languages, such as Pascal and Simula, are designed to teach programming concepts to beginners.
+-   Languages like Pascal and Simula are designed to teach programming concepts to beginners.
     
--   Some languages, such as Fortran, are designed to produce efficient numeric calculations.
+-   Fortran is a language designed to produce efficient numeric calculations.
     
 -   Some languages, such as COBOL, are designed to provide readable syntax for financial and other business applications.
     
--   Some languages, such as Ada, are designed to combine reliability, robustness, readability, and execution efficiency.
+-   Languages such as Ada are designed to combine reliability, robustness, readability, and execution efficiency.
     
--   Some languages, such as Python, are designed to produce programs with minimal effort.
+-   Some languages, such as Python, are designed to produce programs with reduced effort on the programmer’s end.
     
 
   
-  
 
-## Why do we need to know about programming languages?
+You must have now realised why multiple programming languages exist; one solution doesn’t fit all. 😓
 
-Studying programming languages will help you be better at your job, make more money, and be a happier, more fulfilled and more informed citizen, because you’ll learn to:
+**Why do we need knowledge on programming languages?**
+
+Learning the fundamentals of programming can give you a competitive edge in the technology-driven world. It also enhances your logic and problem solving ability. Programming languages help you broaden your knowledge bank and be a more informed citizen. From these languages you learnt to:
 
 -   Choose the most appropriate language for a given task.
     
--   Learn new languages more easily.
+-   Learn any new languages more easily
     
--   Use the languages you do use more productively
+-   Use the languages you know more productively
     
--   Design your own language.
+-   Design your own language and tap into your creativity
     
--   Encounter fascinating ways of programming you might never have imagined before.
+-   Encounter fascinating ways of programming you might never have imagined before
     
 
   
   
+  
 
-## Types of programming language
+## Types of programming languages
 
-## 1. Low-level programming language
+### 1. Low-level programming languages
 
-Low-level language is machine-dependent (0s and 1s) programming language. The processor runs low- level programs directly without the need of a compiler or interpreter, so the programs written in low-level language can be run very fast.
+A low-level language is a machine-dependent (machines can only understand binary 0s and 1s) programming language. The processor runs low- level programs directly without the need of a compiler or interpreter, so the programs written in low-level language can be run at high speeds. You will learn the words compiler and interpreter from a programming perspective in subsequent chapters.
 
   
 
-## 2. High-level programming language
+### 2. High-level programming languages
 
-High-level programming language (HLL) is designed for developing user-friendly software programs and websites. This programming language requires a compiler or interpreter to translate the program into machine language (execute the program).
-
-  
-
->The main advantage of a high-level language is that it is easy to read, write, and maintain.
+High-level programming languages (HLL) are designed for developing user-friendly softwares, programs and websites. This programming language requires a compiler or interpreter to translate the program into machine language and then proceed with executing the program.
 
   
 
->High-level programming language includes Python, Java, JavaScript, PHP, C#, C++, Objective C, Cobol, Perl, Pascal, LISP, FORTRAN, and Swift programming language.
+The main advantage of a high-level language is that it is easy to read, write, and maintain as they are languages made to translate human words and commands into something much easier for machines to understand.
+
+  
+
+Some examples of high-level programming languages include Python, Java, JavaScript, PHP, C#, C++, Objective C, Cobol, Perl, Pascal, LISP, FORTRAN, and Swift programming language.
 
   
   
 
-## 3. Middle-level programming language
+### 3. Middle-level programming languages
 
-Middle-level programming language lies between the low-level programming language and the high-level programming language. It is also known as the intermediate programming language and pseudo-language.
-
-  
-
->A middle-level programming language's advantages are that it supports the features of high-level programming, it is a user-friendly language, and closely related to machine language and human language.
+A middle-level programming language lies between the low-level programming languages and the high-level programming languages. It is also known as the intermediate programming language or pseudo-language.
 
   
 
->Example: C, C++, language
+A middle-level programming language's advantages are that it supports the features of high-level programming, it is a user-friendly language, and closely related to machine language and human language.
+
+  
+
+**Example:** C, C++, language
+
+  
+
+**Check-point Assessment**
+
+  
+
+**Que:**Which of the following is not a programming language?
+
+  
+
+1.  PHP
+    
+2.  Java
+    
+3.  Trap
+    
+4.  Pascal
+    
 
   
   
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  Trap
+
+</details>     
+
+
+  
+  
+
+>See what Winston Churchil has got to say -
+
+  
+
+![](https://lh5.googleusercontent.com/ISI3gh_ZYaBgnX67_01xFO0Pi7C5hJCVNJBKBjUcL01Y6B8qU_y1zXHkPmHElIqiYkmVm0n0zdB1E6MxtJO7gMmgZpwp5Ve0gXxQ8X1Uoha7fSweKX3AJKXcvJ79coBAj9GypEOA28i5w8hmvjCbliU)
+
+  
+
+It is said that we should learn from our mistakes and even better, learn from other’s mistakes. Just to avoid repetition, let’s see what languages already exist.
 
 ## History of programming languages: A timeline
 
-Listed below is a timeline of the history of programming languages. The first known programming languages were complicated machine codes that were manually inputted into early computing machines. As you’ll discover, computer programming developed quickly from machine codes to fully automated human-readable code.
+Listed below is a timeline of the history of programming languages. The first known programming languages were complicated machine codes that were manually inputted into early computing machines. As we move further you’ll discover that computer programming developed quickly from machine codes to fully automated human-readable code.
 
+  
+
+Before we dive deeper into the years and names of programming languages, check out the timeline of how it evolved.
+
+  
+
+Click here to see! (make this a link and add the below image to open up in a new tab)
+
+  
+
+![](https://lh6.googleusercontent.com/EwI_JxVNXvroykeFn2G6iMqlldRlKD8t5ADJitot0f0yL31Lqm11ZY2J236iTmoPPKWPmYJWR9-bkzQoy5sPdGwuZr-0c2W1NGo3dLbT2f8L_xYE4y8ygYJ8EkX_jMDRDuo_u0YtRKRsIi6kYG_Zkz0)
+
+  
   
 
 ### 1843: Ada Lovelace’s machine algorithm
 
-Ada Lovelace invents the first-ever machine algorithm for Charles Babbage’s Difference Machine that lays the foundation for all programming languages.
+Ada Lovelace invented the first-ever machine algorithm for Charles Babbage’s Difference Machine that laid the foundation for all programming languages.
 
   
 
-![](https://lh5.googleusercontent.com/-XKpEf73rDwmlmwN8cE4LK0FUrWiE3tloUBNsWBUnepTxJDdAzNctAP7M-TH5iLdAaQFxZbxmJA7mJ3g8Z4GgZf_T0Fho9l0lcoihYqvmrW6iGwKxt0_4dSs_09zHjjSuyI4VEE22Tew5n8TLOY)
+![](https://lh3.googleusercontent.com/-IKVJVtqyflON93hLFakLJngx5rfd5Sqt2D7vs6mKgeFEMVcqPRVdW9xrbbKSeJuKgIiYhvMp17QP_9Cd3wrBIxWFRihBy9UDFkJhrT0ApLmmxXub3jVB7Gr-F3CN_Uix8L_JPZGg0gTHJgjzzRidyE)
 
   
   
   
 
-### 1944-45: Plankalkül
+### 1944-45: Konrad Zuse’s Plankalkül
 
-Somewhere between 1944-45, Konrad Zuse developed the first ‘real’ programming language called Plankalkül (Plan Calculus). Zeus’s language (among other things) allowed for the creations of procedures, which stored chunks of code that could be invoked over and over to perform routine operations.
+Somewhere between 1944-45, Konrad Zuse developed the first ‘real’ programming language called Plankalkül (Plan Calculus). Zuse’s language (among other things) allowed for the creation of procedures, which stored chunks of code that could be invoked over and over to perform routine operations. These are more popularly known as routines or subroutines and can be used to store chunks of code that could be [invoked](https://www.merriam-webster.com/dictionary/invoked) repeatedly to perform routine operations such as taking a square root.
 
   
 
-![](https://lh3.googleusercontent.com/xOPnK_WI-lUq6gdexQgHzDMZ14bcoHXEMxXFuUi_pCaLQ9js1z2jgUOazOVsOAVKvBEXy3O8f-cAoswF_n1plo4GFobEbIbc4AFGAkL2VPirsqzv4xSMMBM4nT01cRmSa5PNwNfwpqQVFKnz-sA)
+![](https://lh4.googleusercontent.com/V2G6aqMXSh4xT5Yvl-dppdOvoQqJKECPGdLzWQf6VLxZk_EnKH-ni3f3cnoCwW1GLVZDSADdEJQcDIXlg8unNGU5bQsmX6yOQYRoY2RqET6gmSLqnZfkOnokCcD7SLnobxQQWeq4bLnbmgLOOlSNRNw)
 
   
 
 ### 1949: Assembly Language
 
-Assembly language was used in the Electronic Delay Storage Automatic Calculator (EDSAC). Assembly language was a type of low-level programming language that simplified the language of machine code. In other words, the specific instructions necessary to operate a computer.
+Assembly language was seen in use first in 1949 and very soon used in the Electronic Delay Storage Automatic Calculator (EDSAC). It was a type of low-level programming language that simplified the language of machine code. In other words, the specific instructions necessary to operate a computer.
 
   
+
+**Check-point Assessment:**
+
+  
+
+**Que:** The first ever machine algorithm was invented in the year?
+
+  
+
+1.  1853
+    
+2.  1843
+    
+3.  1833
+    
+4.  1863
+    
+
+  
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  1843
+
+</details>     
+
+
+
   
 
 ### 1949: Shortcode
@@ -145,7 +248,7 @@ FORmula TRANslation or FORTRAN was created by John Backus and is considered to b
 
   
 
-![](https://lh4.googleusercontent.com/h4yEW6P2TKRP5nnxIgI9ogZwBZCJF2f4O4DAMtGAehxqvVxRk3Ls_6UjGomByXAm5u2YxJ-fagVH612bfmp6INYpO-zYVY6Ai9Gd3YQm2sujjV-spUoP6pepLHLBdu7KaNSx3W6tgLzaUlenzbY)
+![](https://lh3.googleusercontent.com/xdcKI9p8z_e1IH1_zCy-m2lir4prRmBgMQ1CL2vwRaUEouZU4ifvWpw6DEfuFP8j5BiIgOe-d1cg90oT8Fv896jr0Bj-NVPpUj2sV5fIx2PC_2vgJGK6BjiBZMO69-zYfOnjfKwRL4HBnsSXyuvX3Ds)
 
   
 
@@ -155,13 +258,38 @@ Algorithmic language or ALGOL was created by a joint committee of American and E
 
   
 
-### 1958: LISP (List Processor)
+**Check-point Assessment**
 
-List processor or LISP was invented by John McCarthy at the Massachusetts Institue of Technology (MIT). Originally purposed for artificial intelligence, LISP is one of the oldest programming languages still in use today and can be used in the place of Ruby or Python. Companies such as Acceleration, Boeing, and Genworks are still using LISP in their tech stacks.
+**Que:** Select the incorrect statement(s) from the following?
+
+1.  FORTRAN was created by John Backus
+    
+2.  ALGOL was created by a joint committee of Asian and Australian Computer Scientists
+    
+3.  Alick Glennie developed Autocode
+    
+4.  None of these
+    
+
+  
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  ALGOL was created by a joint committee of Asian and Australian Computer Scientists
+
+
+</details>   
+
 
   
 
-![](https://lh3.googleusercontent.com/2YZj7Xdacstt94cdvW8z54zpy0u2EJ-SIXRzKkXTQpndGekBDqNHM6eZ4peZviRiuDa8I5_SHXlBb6gbkZ0ldnLBEZ9hbuc2DIDMEZzw9jvHMuW5IN3XvYQz9X2io2p2z1UrZD0hIu0RY1l1AcE)
+### 1958: LISP (List Processor)
+
+List processor or LISP was invented by John McCarthy at the Massachusetts Institute of Technology (MIT). Originally purposed for artificial intelligence, LISP is one of the oldest programming languages still in use today and can be used in the place of Ruby or Python. Companies such as Acceleration, Boeing, and Genworks are still using LISP in their tech stacks.
+
+  
+
+![](https://lh6.googleusercontent.com/DN2P5XNTgkkcUukLC-ILKnuammpTltdmyfFZjuAFIeZSpbQ6UYnyPMmc5f6wu5dIBf--14NH3snovwOoxHhUmOeV_Tft2pFMGuPbTDaYrnVTUbpWfy1fJo_tIjd2IP_AaVysFLLmQg0q63rtt_MSIPM)
 
   
 
@@ -171,7 +299,7 @@ Common Business Oriented Language (COBOL), is the programming language behind ma
 
   
 
-![](https://lh5.googleusercontent.com/zZYAExOBtErqlrkwmu2qQ7BocGR-a_oIyzHpSnESwGpP6ye_t3xuMIlf2db6jkchfaDAAd38o-sK_bj5nic3McL88uMtov0ZdzJF30et7pfBIBTCR3bsZZzQsSU5Z6bTkEwGee94e-p4bD90Dl4)
+![](https://lh3.googleusercontent.com/1r6KDQJn9nij9-pvC1uFghaB7q3_b-pTJlJrAmzrheaHjw2QxyrJwSPHTbz64jb3Cl3QK7dC1wk6KkKitfH-M2Xr9dzx3pLSDuFxe40SDYbACN4q4LlwXYay-budNZVQcWpSPhvN74x34iixOGxhb7o)
 
   
   
@@ -183,9 +311,37 @@ Beginners All-Purpose Symbolic Instruction Code or BASIC was developed by a grou
 
   
 
-![](https://lh4.googleusercontent.com/oj1ZmUU6g-nSbk47kq2YEZ4sRW_lShtBoxw4k1OAdxMg95d-hwPcdcPf750reThHZ3uYEChlIn2kCt0mTUdAQXMmSKm28LdeoWcQyrM5CsyeV2cj-JUeENvDHZ0e4Y0M8INWW6rzhwcjNl7GPfM)
+![](https://lh4.googleusercontent.com/GX3Ij0f-xOLod27w3xZR1BJWVMicDVyGpk4NO6ehsHPH9KqEJSwcNasHxfhSARpxzGKeSxZsE9EeoioWducY5Km3ju7UVV8Hz6UHO-HbwKgGvAMGURolSt81CUY2XRHqeJguVS-rLv5dBpAkZMs1lJE)
 
   
+
+**Check-point Assessment**
+
+  
+
+**Que:** The programming language behind many credit card processors, ATMs, telephone and cell calls, hospital signals, and traffic signals systems is ?
+
+  
+
+1.  COBOL
+    
+2.  BASIC
+    
+3.  LISP
+    
+4.  ALGOL
+    
+
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans : COBOL
+
+</details>     
+  
+
+
+
   
 
 ### 1970: PASCAL
@@ -194,7 +350,7 @@ Named after the French mathematician Blaise Pascal, Niklaus Wirth developed the 
 
   
 
-![](https://lh6.googleusercontent.com/J9DhUAXD_CVF6vy-DaqBeBxCNOhqDFYleSTpc2gdjYZbAXgy8xAx0GSoOtsnz6Uu5UDmZbX52aP9WWR1Abgo8FAu1Yavakov_fcrWrCgqcfNqPlJj6Dbr7ES4Jj2DOcjG4PE8mbG79wr5w2gR5k)
+![](https://lh3.googleusercontent.com/2F3pFaKFqecEjt8-XiUhmXzvJ_lvCvfciDmHZYPLUPSTuEWUi77YHskDeH5NIFH_f-TZ_IEgyum7SGO9ycRny5UIL5cWXLQHqnJx2XXt_JOejRW8FLRSJ9wbMtLw-hI4R3kc5TDN-A0XIvoyhV0sWew)
 
   
 
@@ -204,7 +360,7 @@ Developed at the Xerox Palo Alto Research Centre by Alan Kay, Adele Goldberg, an
 
   
 
-![](https://lh6.googleusercontent.com/EdjmChclxBEuuK6DCQCH-cERT4Dc6_NuwAhNgJpoglWpUjuLFiwCKvv9-_U3c9LI1cUmPeOIztteDIBeLTaCJ_zdBRp5bBo-7GOWiFRLf1OjuhbVyh8Y9fuOLwPdsrxGRpA51G0iJEAWeTEEmeA)
+![](https://lh4.googleusercontent.com/6RGdiclEdm1D80-EMOEOSpe_pwqSbp4XYdgbjAoUjL9DWHl2rAcbUJ8fsUfaPqPQtcZC7y4svvGyfPvEIYdPA-5O6Z7gOM4Ql6z72JFo6b0_COa6xOTNnXN-GbRZIco1gz_p7fO5FZJQSxldSCFI2Ec)
 
 ### 1972: C
 
@@ -212,8 +368,34 @@ Developed by Dennis Ritchie at the Bell Telephone Laboratories for use with the 
 
   
 
-![](https://lh4.googleusercontent.com/rY0EdA0xd28eIf-2xEJrPfrfWJBvfISAWYe80ubbhPnUkv5YkdrMDbHijcR4ycY_hUthdEBZsAe18GdQLL_lpqqJcxgrCBFfxGMTbKqQtyAVNRtDSpBSPpCdSiPz9MKrhtgO-9h8hm8L-m2jqSg)
+![](https://lh6.googleusercontent.com/mEA8KhxgLX59SWR_34N8Ds64oA0-aQWdcUJUqrdry-BqZmtmUkSXfYT8pfeeyPi9nsFkZ86W01Kf6R1i-6DISuRG0nd0r6ZPLbG5fFY_E38zELlc5J7JJSIBUz_g6YQ8YDmqe1voGy_LghdX68l8jYU)
 
+**Check-point Assessment**
+
+  
+
+**Que.**Microsoft supported which of the following languages in development?
+
+  
+
+1.  Smalltalk
+    
+2.  Pascal
+    
+3.  BASIC
+    
+4.  COBOL
+    
+
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  BASIC
+
+</details>   
+
+
+  
   
   
 
@@ -223,7 +405,7 @@ SQL was first developed by IBM researchers Raymond Boyce and Donald Chamberlain.
 
   
 
-![](https://lh3.googleusercontent.com/dYn-CrJ4CsvtkBQYx83yFqeJs0RjinCIpidfm3_Dszi2_-ZS6MmORQUmmn7jm0WK9tETPKezY8Zlvjt-Dgb-TuleigfxMmKuB7x01M4tf6MSuKNT_8brKJ6ifDXw8Uol2IK0MWir4YjEc3vdyKc)
+![](https://lh5.googleusercontent.com/hfVq9BZDNrgbThdscb3CrHb8yDzRBVWjhhGeYymyPufGpQ9IictZP6odXzYpC8b8oIgDGNcVhGJamIX3rouh_4AjOwhfYIFydLG2R6iF3L1JVPhwR2wDDKLs8rn5nVZfD_OE_JAYzGZCBZtk7YxVYrc)
 
 ### 1980/81: Ada
 
@@ -235,13 +417,41 @@ Ada was originally designed by a team led by Jean Ichbiah of CUU Honeywell Bull 
 
 Bjarne Stroustrup modified the C language at the Bell Labs, C++ is an extension of C with enhancements such as classes, virtual functions, and templates. It has been listed in the top 10 programming languages since 1986 and received Hall of Fame status in 2003. C++ is used in MS Office, Adobe Photoshop, game engines, and other high-performance software.
 
-![](https://lh4.googleusercontent.com/9X81lZDoVdRxoIV3VacIo9Q_JvpWFiJJUeewIws7nEn28MkaFRK03EqEjo_MeG5gDEzYG73hWYN32Nn_9nysVs-PoVqm3V0u_C6Xw58670xiaNIemy4sED2yTA53rMeVaAmigC76pUlq745CPkI)
+![](https://lh6.googleusercontent.com/SK2B1KIonutehIPkZppIITFara_zAc7aO0cv5sDP5PelLFbytzSCuKSiuwl1OpIIAPdwzGDoBWlwH1tE-eDnB4IerJZXotyGTevUVt4p5tlljsB3kz5I6Id4oPFb-Sy3YGhEQyM9Xw5j6WAI2ou-mCE)
 
 ### 1983: Objective-C
 
 Developed by Brad Cox and Tom Love, Objective-C is the main programming language used to write software for macOS and iOS, Apple’s operating systems.
 
-![](https://lh5.googleusercontent.com/CFTS3AV5xvPsSH5fGh8rLGz6qy1-yAsIDrvsUXcAMZ7s8oYnnq5j7F7pguibOCDyscmSxQ99X_bgeianx-P3viMbgHaAGCN6lGLl7iPxKXtETdwV3CsxbScLzDm16ygvjmA7ciu9Uy1hDlwd4LY)
+![](https://lh4.googleusercontent.com/a3DImj-eZTpZajHJG5VhIJKlGQVqEerCrrBiHwwDtYn9DBnVgVLPYJ6DJsE8v7YuaTplzRS126Moa8Auv-bZRv6YRLdaXTRWX7c6aaDVWVWDsyZuLBjI1lX-QEhv2eToqx1IpWJXB-rhz_j_wIiPZwo)
+
+  
+
+**Check-point Assessment**
+
+  
+
+**Que:** IBM Researchers played a very big role in the development of which of the following Languages?
+
+  
+
+1.  C++
+    
+2.  ADA
+    
+3.  SQL
+    
+4.  Objective C
+    
+
+  
+
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  SQL
+
+</details>   
 
   
 
@@ -251,7 +461,7 @@ Perl was created by Larry Wall and is a general-purpose, high-level programming 
 
   
 
-![](https://lh3.googleusercontent.com/VUTqxCNf3UdrBcnSV34h03xAFm2NXLaOdHK1Gruf_QUl1jFJhtBpkKia5jYxEgAa7eALhEnu1L2ZxqWjF2ZT-vXmZz_nvPYZ-b3jT-NO9kKPvrEndYoVENWHIjcPO4eZDleP6LoROqYix6G-Sgk)
+![](https://lh5.googleusercontent.com/lKS6s7inHMRMcUaneAZJ5GnXwCvWvnvO2QJJ75Lp1Ro8r6H70ZJ0zel2eZKjSYCyGWIV4kAECaBMJfAlYwcarfP5mkBQ8VE0Si34GKqN2tG2wOyCkuTYjQhpddwmys29_wrpB13jma1reqoKp0D80NM)
 
   
 
@@ -261,7 +471,7 @@ Haskell is a general-purpose programming language named after the American logic
 
   
 
-![](https://lh3.googleusercontent.com/MSSQuwWHgi-VF3br8GrEl1U00PDxq0WSdmRP2vmq_hAAXqjPV7gkoOzIibhHyKQJaWVJKt1INxRQzAqLhPGNXVjWtnQ6aJ9hbq_YzBirQBMuX2paEYGATnpWcORfQcjTz1FxOUX1c6T516BE7zI)
+![](https://lh6.googleusercontent.com/0nMQLmNgzihOtK6Q9pPGDDhjbUxKGJFOkc9yRDEPB64Ff6_uFuqWZAP5Si3I90xd8nAZcE5xmiIeyBSxHxnsUNpgIVSKn11JrWRi7reqxwk_dziPm7OBOY6jeL6OIHmb-StsYKG2ekd2zAN7WiJmWEw)
 
   
 
@@ -271,7 +481,36 @@ Named after the British comedy troupe ‘Monty Python’, Python was developed b
 
   
 
-![](https://lh3.googleusercontent.com/ffjZPdJhJSclGiE5wySMmKAMWx913Gx_GlFP5X2YTdPuMgRgKvCD3ZQMC3Y1qfJt3H6jqM7Xdt8qyys7aGX_ih9UkJzUXPlFnmGioGoHuLdtVwxNVipoaqPg4FOkVABTVDgCzJsGqsprpRoz8SQ)
+![](https://lh3.googleusercontent.com/hBcKUTAXsTUi0yOkx3qtNbxmKvFgHKfKwD2K-aF9GlUCrPwc-VvqenLfsWexvwc2ZlJ0lzPR2KtLfQVioikC45vtGB5xI4gKWzD07091iQV7hi90RSe1c91bZ6gjEMrTr0Xe7Y9aoQSbXWyDchbg0kY)
+
+**Check-point Assessment**
+
+**Que:** Select the incorrect option
+
+**Example:**- Dennis Ritchie : C
+
+  
+
+1.  Brad Cox and Tom Love : Objective C
+    
+2.  Guido Van Rossum : Python
+    
+3.  Honeywell Bull : Haskell
+    
+4.  Bjarne Stroustrup : C++
+    
+
+  
+  
+
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans : Honeywell Bull : Haskell
+
+</details>   
+
+
 
   
 
@@ -281,7 +520,7 @@ Developed by Microsoft, Visual Basic allows programmers to utilize a drag-and-dr
 
   
 
-![](https://lh3.googleusercontent.com/Kz4nUDfjqhv05qhw10YkJg82_332QC6_Xdpr7dig57H3wVdUUFipovuOo8mPhZlLGc3n_1jV-ViIzDqWEhxAmhbiBHTOpygIht_LhxSX-gVMJboF5qDyHWangUthcwozyWcZ_EtPjqKaYlTrsGY)
+![](https://lh3.googleusercontent.com/ya_xRbmjmvRZDhE-I0QbNRF_ATqa74Rs1Zi5RRrLfSawtbrNtbRIjBv1NbMzKn1gyxpCV-JSUWxCK1EXVs18xAYvxo57KgiHfLFXf165EU4XXtOMynLMfNrfWOpBaxU6nZSLka6BeuEZkAGjRPHc8vk)
 
   
 
@@ -291,7 +530,7 @@ Created by Yukihiro Matsumoto, Ruby is an interpreted high-level programming lan
 
   
 
-![](https://lh5.googleusercontent.com/VSlOuC2czOQmluovFSJMJooCUYSH1C0F789jndkWLnaH8IRreujeOKVpazzLyqctOkfiSv5t7_ccbdoWm1MQ7ot_MALggAJ8RYx2xIZO4Nh1MRQZmMs17FbF-a2jbGwEZRP9l_-w_FZqO_wpUkw)
+![](https://lh4.googleusercontent.com/gzHCiU_8dR3ihhLVGAr90oUFAgxJrxiOvg363Xc9Ss7siinZmR3190qphWwA4EBCXmXgcHvn4fWlwHGFE68pAW8V6atWAY93F-X2xqUk0iq-f18sJ4ORbJFEmPOfyr1eVp5LtsCLzoIQF9Al0ssZv_k)
 
   
 
@@ -301,9 +540,34 @@ Java is a general-purpose, high-level language created by James Gosling for an i
 
   
 
-![](https://lh5.googleusercontent.com/ZOcUcOB2f08z1TcBZrC0il34StuXVGwxelxpCvEoxUqy7imJWQ03Ojcgbevqv1eN5C0nK9o3clYN_pT5LWaebCKsrcikl8ezFtq8SGfXxbLURE1qjIkq9aqEYm8ZPFZ4fKFHa0q_6a3tnpnif1c)
+![](https://lh5.googleusercontent.com/SkiXCeX00r_iGE_SGuSpyqPxzBWMWOQSrSmZPccdXN6VaaRik-ird8IGRsqUjJqH-ONf2nNMFDWthcZYen6bjAUYTdx_R3scWr8JIjRPOvgrK5UVPdfAce-kneDfK-kzLUIEmYWNgSUiolq8eeCX-Hs)
 
   
+
+**Check-point Assessment**
+
+  
+
+**Que:** Visual Basic has been developed by?
+
+  
+
+1.  IBM
+    
+2.  Apple
+    
+3.  Microsoft
+    
+4.  Oracle
+    
+
+  
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans : Microsoft
+
+</details>    
 
 ### 1995: PHP
 
@@ -311,13 +575,8 @@ Formerly known as ‘Personal Home Page’ which now stands for ‘Hypertext Pre
 
   
 
-![](https://lh3.googleusercontent.com/MxiS5e1bvoN0QX8i2V5cWXVTXxlCEp2OtiIIwUaYUQi6kXSUEBQ1aOAJTiODf13bjSJFyQh7MKcPNCE_G3n3LOEi8dtXrIeCBeb1qbeUvm_NmPgaIBl6ZZEaSdafMHTNZ3ThLhmhBUVe6Uk3CQI)
+![](https://lh4.googleusercontent.com/Kr6gyV2TWy76m8Z9cDrbnFPQxkrowWn6BH37u8msyRsPm9GvBvnquigwkbUVzjnQ8PxRDSAttelukGLn-5gTJDfq2GAQ0e8-QcVocNkL5VQKoqw3gjKpvO2Y7Tp4Kfmw5OVlZplOyKpS4_Ys4prfoqI)
 
-  
-  
-  
-  
-  
   
   
   
@@ -328,15 +587,36 @@ JavaScript was created by Brendan Eich, this language is primarily used for dyna
 
   
 
-![](https://lh6.googleusercontent.com/5S_z7LTlJB-r2h1gE7m8cKxkS31yJE7105B7c-ecTh9ERaMCBPviQ5JW0twOEgMVNCgJwIc4rX-1D8WkyH-jCE85UoWoQxtVy_nmk8-94auyjdrIxZ19Tj3APWMQClhtfaUK6U07S83OEOXedvE)
+![](https://lh5.googleusercontent.com/OXullmG4iLHhQbjHuwngInehJEOl3TEZdnkT5-91funRmBvpdmuR_McBFEKlie6MPhq3kGNBbLi_Hhr4BN0G_P3f_TpheHYRTA8PP6kY0h09_1mEENMT3lLAkhUSb2hBmSpe5574PKMcI8GrEvWBdAc)
 
 ### 2000: C#
 
 Developed at Microsoft with the hope of combining the computing ability of C++ with the simplicity of Visual Basic, C# is based on C++ and shares many similarities with Java. The language is used in almost all Microsoft products and is seen primarily in developing desktop applications.
 
-![](https://lh5.googleusercontent.com/M1Se-qA29tJE9dgYgUxJ9ux0W9PWA42v6zXncyfsgGMs1BcgqJFRrHcjT_eCbnebqrBBiIGYrJYPGE62g2OzgqIPmViLSXWdky7-FTyUInfUo1F7LvZSpfhskCr1m22qsCijKA0YdblMvin4TqY)
+![](https://lh3.googleusercontent.com/dTa5A7e0Wx8irhLOrk-soiyVqEDTelefflaYfYF8iUb2Q70ss56P6mQWyY44u8pWE8i7WriEazOORYQitEA_exzR8zy_x9YsLi_AiEzbuDa95kFvkPhrjLiYBpYxRBIq7KxESt34d80Pkz-TNRSuI-w)
+
+**Check-point Assessment:**
+
+**Que:** Which of the following languages does not use the concept of object oriented programming?
 
   
+
+1.  C
+    
+2.  JAVA
+    
+3.  Python
+    
+4.  C++
+    
+
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  C
+
+</details>   
+
 
 ### 2003: Scala
 
@@ -344,7 +624,7 @@ Developed by Martin Odersky, Scala which combines mathematical functional progra
 
   
 
-![](https://lh3.googleusercontent.com/nld6xN0Zvx_hKy0BZd0nPPpR4z0iDwIgQrvy5G67PEArrYZgGz7tHYKITNLCwEjtJoShkFoeB176zD69_aGX1hnCBYQe49n0i4sM55PEUTbLE0cbhPt6CLTANEOtnUWmSIUeg6sZ_ntw-TpyOBE)
+![](https://lh4.googleusercontent.com/HQ0vtAp8TOtieRi-JziJEmJwiARE9nzQYkbfqozxm0AaLcQx_yybFrsoEC-U_3yIlkavtPLckHMnHgDY5EJtSUg9IOddLXeUugEQ-LzRqX0EMYrEoiNCvOJTTr8Kv9RvVVu8n7-6_OMiBez0xQfBNvs)
 
   
 
@@ -354,7 +634,7 @@ Derived from Java, Groovy was developed by James Strachan and Bob McWhirter. The
 
   
 
-![](https://lh5.googleusercontent.com/CXGGroiH2D90SsPWFVizB4YAMgO30U-PbTKHpB9jPYHZ4U6nyRCET09aiXKAUMGLlP3sr7HfiSiJWBMJU4H4D6bW58eqJxspAr6stXr_6yQyKEUcXxg74p7RfY-cKQiM3Ep_IqcUwxHxQoRqAs0)
+![](https://lh6.googleusercontent.com/s4t1Qq3Nm5khGIK751RvmS9-387VjYyO7Lsn04PHyuhO1O-G9v0zlaNsEuFeIS2LRJfF7fx6oWovkucAMHyulturW84rWp2-wbd_uqSzYwzHkZT3Pj3Sc2tzpnNyj6n7uNQFwNH8StITR0-ki8LNQ2A)
 
   
 
@@ -364,7 +644,7 @@ Go was developed by Google to address issues that occur due to large software sy
 
   
 
-![](https://lh3.googleusercontent.com/BVTwoIylyhhq-c9DXzfRXs1KeSX3g0RJajkLIcXVX9yrF_HLV6LkfaMkSKZwPb0edk-A_3GZN5FkUf8rIHtwNwNKAvTM35vdaThestywc87pFbnT4Lk5GE-U4IQ4J7i2BA0zDH8lOlMDfDoSlfI)
+![](https://lh6.googleusercontent.com/Op9trkNc-yFdJhuOXRuGoaksiQdNlHoriLihapcbqfZVsyoQ6dNQ7aFQh6JE1IelDaBjmDw8pNuZslQGqG2U_FoNeWOomzOm3XaAvxmNpwvUpYWT05qaDYUnU78AiCtQavDLkOK6mM8RD7Iqqq9yaOo)
 
   
 
@@ -374,14 +654,41 @@ Developed by Apple as a replacement for C, C++, and Objective-C, Swift was devel
 
   
 
-![](https://lh6.googleusercontent.com/Tc26AIRwcR_Dgi6e9I3chx5jFx5U6J_IaOaK85CU5D9KsE9lVnASQPv9tb4ix-xnih7V0yyd1BsaNgLj3YWYpM1GC-cC1za8GBqo5M1-p8-RQTITe5OS56BcfiNWbwbGx96BBWW18L4X8oOkmuM)
+![](https://lh4.googleusercontent.com/qQdN9kB4pHEDjGT4e1f6sIIusEr7AL9QusZILZ5yPmOtQoIcZAxz9oS0mlFsjQP6__OoP0QlRDmjT8VM73K62DCi9RbYmDqREvi5g6LrOh-vLS37qU-NAwJHuoxZkKtCtLVb93TbpnAphBrpPrVZkMM)
 
   
   
+
+**Check-point Assessment:**
+
+  
+
+**Que:** Which of the following languages was introduced by Apple as a replacement for C, C++ and Objective C?
+
+  
+
+1.  Go
+    
+2.  Groovy
+    
+3.  Scala
+    
+4.  Swift
+    
+
   
   
 
-## What old programming languages are still used today?
+<details>
+  <summary>Check the Solution!</summary>  
+  
+Ans :  Swift
+
+</details>   
+
+  
+
+**What old programming languages are still used today?**
 
 Not all programming languages last forever. Whether it’s a result of developments in technology or simply being replaced by a more sophisticated language. With that said, there are some old programming languages that are still being used by IT professionals today:
 
@@ -399,7 +706,7 @@ COBOL was developed back in 1959 and was one of the first high-level programming
 
   
 
-![](https://lh3.googleusercontent.com/fu6iwwjH4aIErWUn1iI0LFxg9-AsXWv8Yp4ZFisdbdT7jBS5-WUZvLcjzhB-N4mtBpkgqmDTOOeNlixMGKksTtm726mMAOkOoCoPdErQS9Lil2MwFfgzZYPlTre8eFFsgI3P-DdTzVONXHKWSKw)
+![](https://lh3.googleusercontent.com/q_CqGRm7iyOK9NDljQ6berduNwENSBpBcUXNL-cp9PE7VFjmUupaYUao1fSLqcMsxwG1R5qX71F6YpgZRWY4aPRkZVWMmeOqh-seImboP1jilvOD9Og_g4NZnVC3ZvEwt6gZA32hOZTe52zmmqMkdJE)
 
   
 
@@ -409,17 +716,17 @@ Microsoft and Apple are two of the most fundamental companies in the history of 
 
   
 
->Pascal was the programming language of choice during the early days of Apple. Invented in the early 1970s, Apple developers liked Pascal because of its power and ease of use. However, when Apple acquired the NeXTSTEP code library in 1996, Objective-C (which was licensed under NeXTSTEP) became the popular language of choice for the tech giant.
+Pascal was the programming language of choice during the early days of Apple. Invented in the early 1970s, Apple developers liked Pascal because of its power and ease of use. However, when Apple acquired the NeXTSTEP code library in 1996, Objective-C (which was licensed under NeXTSTEP) became the popular language of choice for the tech giant.
 
   
 
-What is the most popular programming language today?
+**What is the most popular programming language today?**
 
 We’re nearing the end of our journey through the history of programming languages. As you’ve seen, computer programming has developed to a level beyond all expectation, powering the technology that we rely on a daily basis. It’s for this reason that we need skilled professionals to implement and control the programming languages that power the world today.
 
   
 
-## But which programming language is the most popular?
+**But which programming language is the most popular?**
 
   
 
@@ -427,7 +734,7 @@ The DevSkiller 2020 IT Skills Report provides valuable insight for precisely tha
 
   
 
-![](https://lh6.googleusercontent.com/aHYYMB4yfo40tr3x8QLAWXBEv7CQEbJUNWgXzuZAvktObjZNILnE6ouDMnY9e-Z7j7KBHs7b0GY6LLHJ0yBv14fHHhznyMtahX7e6Usg8Lo9R0eBqN01C9yUKlK1E_fmwzvGq-coPT27-QnupQw)
+![](https://lh3.googleusercontent.com/vOUusiWRxMpWQn-Vs9RuQ0KI20Vb9fZFWPjJlsGeVP1eewjZlOb7RIyMryMwTCphzzK6dHzs_ZlyYa21PpT9hUrqxqc2ZJFePwh8X6dsJtyXK6q3Ff7J8pNVMT5rGyOQjLLKyK45W0PTLjQCmMNT7oc)
 
   
 
@@ -436,6 +743,13 @@ As you can see above, JavaScript was the most popular language tested on DevSkil
   
 
 ## Conclusion
+
+Before we conclude, let’s hear from the accomplished people in the computer field of why they feel Programming is important.
+
+  
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Dv7gLpW91DM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 
 The history of programming languages is fascinating. Who would have thought that an algorithm from the mid-19th century would pave the way for the technology-driven society we live in today. From early machine codes to the sophisticated human-readable code that powers our favourite technologies today, programming languages have come a long way. What’s for certain, computer programming will continue to develop as it has done for the past 150 years and it’s exciting to see what the future brings.
 
@@ -469,11 +783,11 @@ The history of programming languages is fascinating. Who would have thought that
   
   
 
-# Assessment
+## End-of-the-lesson Assessment:
 
   
 
-**1.**What is the only thing that computers understand?
+**Que 1:** What is the only thing that computers understand?
 
   
 
@@ -488,11 +802,11 @@ The history of programming languages is fascinating. Who would have thought that
 
   
 
-**Answer:**  A)
+**Answer:** A
 
   
 
-**2.**When writing a computer programmers most programs use...
+**Que 2:** When writing a computer programmers most programs use...
 
 1.  A High Level Language
     
@@ -505,11 +819,11 @@ The history of programming languages is fascinating. Who would have thought that
 
   
 
-**Answer:**  A)
+**Answer:** A
 
   
 
-**3.**Languages that relate to the architecture and hardware of a specific computer are known as...
+**Que 3:** Languages that relate to the architecture and hardware of a specific computer are known as...
 
   
 
@@ -524,12 +838,12 @@ The history of programming languages is fascinating. Who would have thought that
 
   
 
-**Answer:**  B)
+**Answer:** B
 
   
   
 
-**4.**What is a high-level programming language that was developed in the mid-1970s. It is now used to write applications for nearly every available platform.
+**Que 4:** What is a high-level programming language that was developed in the mid-1970s. It is now used to write applications for nearly every available platform.
 
   
 
@@ -542,12 +856,12 @@ The history of programming languages is fascinating. Who would have thought that
 4.  C++
     
 
-**Answer:**  D)
+**Answer:** D
 
   
   
 
-**5.**Python is a clear and powerful _________-oriented programming language.
+**Que 5:** Python is a clear and powerful _________-oriented programming language.
 
   
 
@@ -562,12 +876,12 @@ The history of programming languages is fascinating. Who would have thought that
 
   
 
-**Answer:**  B)
+**Answer:** B
 
   
   
 
-**6.**Which of the following programming language types was created first?
+**Que 6:** Which of the following programming language types was created first?
 
 1.  Procedural
     
@@ -580,13 +894,13 @@ The history of programming languages is fascinating. Who would have thought that
 
   
 
-**Answer:**  B)
+**Answer:** B
 
   
   
   
 
-**7.**Which of the following lists the evolution of programming languages in the correct order?
+**Que 7:** Which of the following lists the evolution of programming languages in the correct order?
 
 1.  Procedural, non-procedural, object oriented, machine, assembler
     
@@ -599,12 +913,12 @@ The history of programming languages is fascinating. Who would have thought that
 
   
 
-**Answer:**  B)
+**Answer:** B
 
   
   
 
-**8.**Which generation of computer languages used the LOAD, ADD and STORE codes,
+**Que 8:** Which generation of computer languages used the LOAD, ADD and STORE codes,
 
   
 
@@ -617,4 +931,16 @@ The history of programming languages is fascinating. Who would have thought that
 4.  Fourth
     
 
-**Answer:**  B)
+**Answer:** B
+
+  
+  
+
+We hear you,
+
+  
+
+![](https://i.giphy.com/media/iI0VCkpeoh27VKlfJa/giphy.webp)
+  
+
+Get some rest!!
